--- a/team/team.html
+++ b/team/team.html
@@ -81,6 +81,7 @@
 
 
         <h1 class="profile-heading">Team</h1>
+        <h3><a href="https://web-team-beryl.vercel.app/" class="pot">Team_project-middle</a></h3>
   <div class="graph">
     <svg>
     <defs>
